--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,django,visualstudiocode
 
 ### Django ###
+settings.py
 *.log
 *.pot
 *.pyc
